environments/gloo-gateway/gateway-api/1.18/portal-only/gloo-portal-demo/base/openlibrary-api/2-apply-routing-config/openlibrary-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: openlibrary-route
  namespace: openlibrary
  labels:
    example: openlibrary-route
    gateway: https
spec:
  hostnames:
  - "openlibrary.k8mesh.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: gloo.solo.io
          kind: Upstream
          name: openlibrary
          namespace: openlibrary
          port: 443
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: openlibrary-route-policies
